Update 'tdzzy14lq-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:41bdde7a6d14bec64d0a97d4affd70fbe1678159@sha256:c1f74925ca9d225db15cfd11f95365c888c92fb28aba8e5f9252b56259b234a1

--- a/components/tdzzy14lq-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/tdzzy14lq-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tdzzy14lq-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:41bdde7a6d14bec64d0a97d4affd70fbe1678159@sha256:c1f74925ca9d225db15cfd11f95365c888c92fb28aba8e5f9252b56259b234a1
+          name: container-image
